// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`req.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
module.exports = 0;

=====================================output=====================================
// @flow
module.exports = 0;

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
var x = require('./req');
(x: string);

import y from './req';

=====================================output=====================================
// @flow
var x = require("./req");
(x: string);

import y from "./req";

================================================================================
`;
